# smooth-mcp-solver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_continuation.py  bench_solve.py
demos/: 2d_nonlinear_complementarity_problem.py  bound_optimization.py  differentiable_lcp.py  kkt_conditions.py  lcp_as_mcp.py  nonlinear_1d_mcp.py  obstacle_problem.py  spatial_price_equilibrium.py  traffic_route_choice.py
docs/: api.md  installation.md  troubleshooting.md  tuning.md
docs/benchmarks/: benchmark-2026-04-13.md
docs/internal/: api_change_checklist.md
docs/internal/benchmarks/: benchmark-2026-04-13.md  benchmark-2026-04-14.md
docs/internal/reviews/: review-2026-04-12.md  review.codex.2026-04-14.md  review.codex.2026-04-16.md  review.codex.2026-04-18.md  review.codex.2026-04-23.md
docs/internal/todos/: todo.2026-04-18.md  todo.2026-04-23.md  todo3.md  todo4.md  todo5.md
docs/reviews/: initial_review.md  review.codex.2026-04-13.md
docs/todos/: todo1.md  todo2.md  todo3.md
smooth_mcp/: __init__.py  _factory_common.py  _kernel.py  _types.py  core.py  diff.py  forward.py  smoothing.py  solver.py
tests/: test_convergence.py  test_demos.py  test_demos_numeric.py  test_dtype_policy.py  test_factory_parity.py  test_forward_factory.py  test_forward_strict_validation.py  test_gradients.py  test_line_search.py  test_mu_used_semantics.py  test_shape_contract.py  test_smoothing.py  test_solver.py  test_strict_validation.py  test_vmap.py
