[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smooth-mcp"
version = "0.1.0"
description = "JAX solver for Mixed Complementarity Problems with implicit differentiation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Jeffrey Horn"}]
dependencies = ["jax", "jaxlib"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "black"]

[tool.ruff.lint]
# E741: 'l' is standard notation for lower bounds in MCP literature
ignore = ["E741", "E402"]

[tool.setuptools.packages.find]
include = ["smooth_mcp*"]
